@@ -25,6 +25,7 @@ Included
 - Launchpad shell doctor fail-code parsing now anchors to full `ShellDoctorStatus: FAIL code=...` lines for stricter deterministic code extraction.
 - Launchpad adapter doctor `strict.reasons=` fallback parsing now accepts spaced reason lists and validates extracted code tokens before surfacing them.
 - Release ops script now enforces `Set-StrictMode -Version Latest` for fail-closed handling of unbound/implicit script-state issues.
+- Release zip wrapper and Windows icon-regeneration paths now invoke resolved PowerShell executable paths (`$powershellExe` / `$iconHostExe`) instead of command-name `powershell` lookup.
 - Launchpad History successful report open now resets viewer startup state (`UseReportViewer=1`, `ReportViewerAutoOpen=1`, `ReportViewerStartFailCount=0`) so manual viewer opens self-heal auto-open disable state.
 - Evidence typing added to operator reports (additive, non-breaking):
 - `report_card.txt` now includes an evidence legend and claim mapping lines:
